--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Thomas Hardy</a>.
+    Coded by <p>Thomas Hardy</p>.
   </div>
 </body>
 </html>
